# 3d-opengl

./: README.md  fragment_shader.glsl  hw3-1  hw3-1.cpp  hw3-2  vertex_shader.glsl
1/glad/: glad.h
2/: hw3.cpp
3/: CMakeLists.txt  main.cpp
4/: LightingAndShadows  main.cpp
5/: LightingAndShadows  fragment_shader.glsl  main.cpp  vertex_shader.glsl
glad/: glad.c
